--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
 
 <body>
   <div>
-    <button>Reset</button>
+    <div id="grid">
+      <div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
+      <div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
+      <div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
+    </div>
   </div>
   <div>
-    <table id="board">
-      <tr>
-        <td id="1">1</td>
-        <td id="2">2</td>
-        <td id="3">3</td>
-      </tr>
-      <tr>
-        <td id="4">4</td>
-        <td id="5">5</td>
-        <td id="6">6</td>
-      </tr>
-      <tr>
-        <td id="7">7</td>
-        <td id="8">8</td>
-        <td id="9">9</td>
-      </tr>
-    </table>
+    <button id="startButton">Replay</button>
   </div>
 
   <script src="tic-tac-toe.js"></script>
