--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       </div>
     </div>
   </div>
-  <div>
+  <div id="gameFinished">
+    <h1 id="text">You win!</h1>
     <button id="startButton">Replay</button>
   </div>
-  
   <script src="tic-tac-toe.js"></script>
 </body>
 
