--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div id="gameFinished">
-    <h1 id="text">You win!</h1>
+    <h1 id="text"></h1>
     <button id="startButton">Replay</button>
   </div>
   <script src="tic-tac-toe.js"></script>
