Added player symbol selection

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     <h1 id="text"></h1>
     <button id="startButton">Replay</button>
   </div>
+  <div class="symbolSelection">
+    <h2>Choose your symbol:</h2>
+    <input type="radio" name="playerSymbol" id="X" value="X" checked>X<br>
+    <input type="radio" name="playerSymbol" id="O" value="O">O<br>
+  </div>
   <script src="tic-tac-toe.js"></script>
 </body>
 
